Finessed the Social Media Buttons
I made them smaller, centered them, put code to make it mobile-friendly so I hope that works. Added the 3 social-media buttons in a bar, the same bar I used for the top part with the different page names.

--- a/contact.html
+++ b/contact.html
@@ -1,164 +1,182 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8"/>
-		<title>Contact Us</title>
-		<link rel="stylesheet" type="text/css" href="homestyle.css">
-		
-		<style>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		
-			form {
-				border: 2px solid grey;
-			}
-		
-			label {
-				text-color: #474a4f;
-				font-size: 15px;
-				text-decoration:  underline;
-				font-weight: bold;
-			}
-		
-			.checkbox	{
-				text-decoration: none;
-				font-weight: none;
-			}
-			
-			
-			input[type=text], select {
-				width: 100%;
-				padding: 12px 20px;
-				margin: 8px 0;
-				display: inline-block;
-				border: 1px solid #ccc;
-				border-radius: 4px;
-				box-sizing: border-box;
-			}
-		
-			button {
-				width: 100%;
-				background-color: #4CAF50;
-				color: white;
-				padding: 14px 20px;
-				margin: 8px 0;
-				border: none;
-				border-radius: 4px;
-				cursor: pointer;
-			}
-			
-			input [type=submit]:hover {
-				background-color: #45a049;
-			}
+	<title>Contact Me!</title>
 
+	<link rel="stylesheet" type="text/css" href="contactstyle.css">
 
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
-				.fa {
-				  padding: 20px;
-				  font-size: 30px;
-				  width: 30px;
-				  text-align: center;
-				  text-decoration: none;
-				  margin: 5px 2px;
-				  border-radius: 50%;
-				}
-
-				.fa:hover {
-				    opacity: 0.7;
-				    text-align: center;
-				}
-
-				.fa-linkedin {
-				  background: #007bb5;
-				  color: white;
-				  text-align: center;
-				}
-
-				.fa-youtube {
-				  background: #bb0000;
-				  color: white;
-				  text-align: center;
-				}
-
-				.fa-instagram {
-				background: #f09433; 
-				background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
-				background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-				background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
-				filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
-				color: white;
-				text-align: center;
-				}
-
-
-
-
-		
-		</style>
-	</head>
 	
-	<div style="background-image: url('img/br/lang.jpg'); background-position: center; z-index: 2; background-position: fixed; padding-top: 100px;">
+	<style>
+	
+		form {
+			border: 2px solid grey;
+		}
+	
+		label {
+			text-color: #474a4f;
+			font-size: 15px;
+			text-decoration:  underline;
+			font-weight: bold;
+		}
+	
+		.checkbox	{
+			text-decoration: none;
+			font-weight: none;
+		}
+		
+		
+		input[type=text], select {
+			width: 100%;
+			padding: 12px 20px;
+			margin: 8px 0;
+			display: inline-block;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			box-sizing: border-box;
+		}
+	
+		button {
+			width: 100%;
+			background-color: #4CAF50;
+			color: white;
+			padding: 14px 20px;
+			margin: 8px 0;
+			border: none;
+			border-radius: 4px;
+			cursor: pointer;
+		}
+		
+		input [type=submit]:hover {
+			background-color: #45a049;
+		}
 
-  <body>
-    <h1 href="XREADME.html" style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
-    <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black; background-color: silver;">
-        <a id="homebutton" class="titlebar" href="XREADME.html">Home</a>
-        <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
-        <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
-        <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
-        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
-        <a id="contactbutton" class="titlebar" href="contact.html">Contact</a>
-      </div>  
-  </body>
-</div>
-		</div>
-		
-		<h1>Contact Me!</h1>
-		<p>Under Construction</p>
-		<hr>
-		
-		<form action="http://www.mysite.com/form.php" method="get">
-			<label for="name">Name</label>
-			<input type="text" name="name" placeholder="Your name..."/>
-			<label for="email">Email</label>
-			<input type="text" name="email" placeholder="Your email..."/>
+
+			.fa {
+			  padding: 10px;
+			  font-size: 20px;
+			  width: 20px;
+			  text-align: center;
+			  text-decoration: none;
+			  margin: 5px 2px;
+			  border-radius: 50%;
+			  top: -5px;
+			}
 			
-			<label for="year">Year in School</label>
-			<select for="year">Year</label> 
-				<option>Freshman</option>
-				<option>Sophmore</option>
-				<option>Junior</option>
-				<option>Senior</option>
-			</select>
+
+			.fa:hover {
+			    opacity: 0.7;
+			    text-align: center;
+			}
+
+			.fa-linkedin {
+			  background: #007bb5;
+			  color: white;
+			  text-align: center;
+			}
+
+			.fa-youtube {
+			  background: #bb0000;
+			  color: white;
+			  text-align: center;
+			}
+
+			.fa-instagram {
+			background: #f09433; 
+			background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+			background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+			background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 );
+			color: white;
+			text-align: center;
+			}
+
+@media only screen and (max-width:800px) {
+  /* For tablets: */
+  .main {
+    width: 80%;
+    padding: 0;
+  }
+  .right {
+    width: 100%;
+  }
+}
+@media only screen and (max-width:500px) {
+  /* For mobile phones: */
+  .menu, .main, .right {
+    width: 100%;
+  }
+	
+</style>
+</head>
+
+<div style="background-image: url('img/br/lang.jpg'); background-position: center; z-index: 2; background-position: fixed; padding-top: 100px;">
+
+<body>
+<h1 href="XREADME.html" style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
+<div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black; background-color: silver;">
+    <a id="homebutton" class="titlebar" href="XREADME.html">Home</a>
+    <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
+    <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
+    <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
+    <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
+    <a id="contactbutton" class="titlebar" href="contact.html">Contact</a>
+  </div>  
+</body>
+</div>
+	</div>
+	
+	<h1>Contact Me!</h1>
+	<p>Under Construction. Message will not be sent for now.</p>
+	<hr>
+	
+	<form action="http://www.mysite.com/form.php" method="get">
+		<label for="name">Name</label>
+		<input type="text" name="name" placeholder="Your name..."/>
+		<label for="email">Email</label>
+		<input type="text" name="email" placeholder="Your email..."/>
 		
-			<label for="checkbox">Area of Interest</label>
-			<br>
-			<input class="checkbox" type="checkbox" value="cs">Computer Science</input>
-			<input class="checkbox" type="checkbox" value="bs">Business</input>
-			<input class="checkbox" type="checkbox" value="acct">Accounting</input>
-			<input class="checkbox" type="checkbox" value="phil">Philosophy</input>
-			<br>
-			<button type="submit" form="submit" value="Submit">Submit</button>	
-		</form>
-	</body>
- 
+		<label for="year">I want to...</label>
+		<select for="year">Subject</label> 
+			<option>Get to Know You</option>
+			<option>Hire You</option>
+			<option>Recruit You</option>
+			<option>Connect With You</option>
+		</select>
 
-   
+		<form action="http://www.mysite.com/form.php" method="get">
+		<label for="name">Location</label>
+		<input type="text" name="name" placeholder="Your current city and state (i.e. Chicago, IL)..."/>
+		<label for="email">Message</label>
+		<input type="text" name="email" placeholder="What do you wish to tell Ana Elissa?..."/>
+
+	
+		<label for="checkbox">Your Expertise</label>
+		<br>
+		<input class="checkbox" type="checkbox" value="cs">Political Sciences</input>
+		<input class="checkbox" type="checkbox" value="bs">Law</input>
+		<input class="checkbox" type="checkbox" value="bs">Web Developer</input>
+		<input class="checkbox" type="checkbox" value="acct">Languages</input>
+		<input class="checkbox" type="checkbox" value="phil">Business</input>
+		<br>
+		<button type="submit" form="submit" value="Submit">Submit</button>	
+	</form>
+</body>
 
 
-    <div>
 
-  <br > 
-</div>
+<body>
+    <div id="titlebar" style="border-top: 5px solid black; border-bottom: 0px solid black;">
+      <a style="position:relative;" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
+      <a style="position:relative;" href="#" class="fa fa-youtube"></a>
+      <a style="position:relative;" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
+     </div>  
+</body>
 
-<hr />
-
-<div>
-  <a style="position:relative" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
-  <a style="position:relative" href="#" class="fa fa-youtube"></a>
-  <a style="position:relative" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
-</div>
 
 <div style="background-image: url('img/br/lang.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
 </div>
