--- a/arts.html
+++ b/arts.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="js">
 
-
-
 <head>
 
     <meta charset=“UTF-8” name="viewport" content="width=device-width, initial-scale=1"/>
@@ -19,14 +17,16 @@
         text-decoration: none;
       }
 
+      
       .fa {
-        padding: 20px;
-        font-size: 30px;
-        width: 30px;
+        padding: 10px;
+        font-size: 20px;
+        width: 20px;
         text-align: center;
         text-decoration: none;
         margin: 5px 2px;
         border-radius: 50%;
+        top: -5px;
       }
 
       .fa:hover {
@@ -58,10 +58,23 @@
       }
 
 
+@media only screen and (max-width:800px) {
+  /* For tablets: */
+  .main {
+    width: 80%;
+    padding: 0;
+  }
+  .right {
+    width: 100%;
+  }
+}
+@media only screen and (max-width:500px) {
+  /* For mobile phones: */
+  .menu, .main, .right {
+    width: 100%;
+  }
 
-
-
-    </style>
+</style>
 
 </head>
 
@@ -90,13 +103,16 @@
   <br > 
 </div>
 
-<hr />
 
-<div>
-  <a style="position:relative; left:600px" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
-  <a style="position:relative; left:600px" href="#" class="fa fa-youtube"></a>
-  <a style="position:relative; left:600px" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
-</div>
+<body>
+    <div id="titlebar" style="border-top: 5px solid black; border-bottom: 0px solid black;">
+      <a style="position:relative;" class="fa fa-linkedin" href='https://www.linkedin.com/in/aecabreraleon/'></a>
+      <a style="position:relative;" href="#" class="fa fa-youtube"></a>
+      <a style="position:relative;" href="https://www.instagram.com/anaelissacl/" class="fa fa-instagram"></a>
+     </div>  
+</body>
+
+
 
 <div style="background-image: url('img/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px; padding-bottom: 60px; border-top: 5px solid black;"> 
 </div>
