edited contact bar
i tried to make a sidebar for contact. code worked i guess but it sucked and i didn't like how it looked. I went back to original idea of one seperate page for contact. In last commit, I added a few new entries. Right now, I added an href mailto my school email.

--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
 		<input class="checkbox" type="checkbox" value="acct">Languages</input>
 		<input class="checkbox" type="checkbox" value="phil">Business</input>
 		<br>
-		<button type="submit" form="submit" value="Submit">Submit</button>	
+		<button type="submit" form="submit" value="Submit" href="mailto: aec4@illinois.edu">Submit</button>	
 	</form>
 </body>
 
