wow what didn't i do...
I added my own logo, to every page. made it mobile friendly. i remodeled my adventures page into my badm320 class. i changed thebackground of a few pages. I totally remodeled the Home page. Changed the font to everything to match my logo font. added some pictures here and there. added emojis to the title bar. made this website way more appealing to users.

--- a/arts.html
+++ b/arts.html
@@ -9,10 +9,25 @@
   
      <link rel="stylesheet" type="text/css" href="css/homestyle.css"/>
 
-     <title>A.E. Cabrera - Arts</title>
+     <title>anaelissa.info 🎨 arts</title>
     
     <style TYPE="text/css">
      
+      .my-logo {
+      padding: 10px;
+      font-size: 100px;
+      width: 200px;
+      text-align: relative;
+      text-decoration: none;
+      margin: 20px 40px;
+      border-radius: 50%;
+      border-color: transparent;
+      top: 125px;
+      left: 550px;
+      position: relative; 
+      background-position: bottom;
+}
+
       a {
         text-decoration: none;
       }
@@ -68,11 +83,13 @@
     width: 100%;
   }
 }
-@media only screen and (max-width:500px) {
-  /* For mobile phones: */
-  .menu, .main, .right {
-    width: 100%;
-  }
+
+ @media only screen and (max-width:500px) {
+        /* For mobile phones: */
+        .menu, .main, .right, .my-logo {
+          width: 50%;
+          left: 120px;
+}
 
 </style>
 
@@ -80,15 +97,21 @@
 
 <div style="background-image: url('img/br/peaches.jpg'); background-position: top; z-index: 2; background-position: fixed; padding-top: 100px;">
 
-  <body>
-    <h1 style="font-family:fantasy;font-size: 75px;">A.E. Cabrera</h1>
-    <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black;">
-        <a id="homebutton" class="titlebar" href="XREADME.html">Home</a>
-        <a id="aboutmebutton" class="titlebar" href="aboutme.html">About Me</a>
-        <a id="adventuresbutton" class="titlebar" href="adventures.html">Adventures</a>
-        <a id="blogbutton" class="titlebar" href="arts.html">Arts</a>
-        <a id="gallerybutton" class="titlebar" href="gallery.html">Gallery</a>
-        <a id="contactbutton" class="titlebar" href="contact.html">Contact</a>
+  <div>
+ <img class="my-logo"  src="img/aeclmylogo.png">
+</div>
+
+<div>
+<body>
+    <h1 href="README.md" style="font-size: 35px; left:400px;"> Ana Elissa👩🏻‍🎨🖼 👩🏻‍🎨🖼 👩🏻‍🎨🖼 👩🏻‍🎨🖼 👩🏻‍🎨Cabrera Leon </h1>
+</div>
+    <div id="titlebar" style="border-top: 5px solid black; border-bottom: 5px solid black; text-decoration: underline;">
+        <a id="homebutton" class="titlebar" href="XREADME.html">HOME 🏡</a>
+        <a id="aboutmebutton" class="titlebar" href="aboutme.html">ABOUT 🇬🇹</a>
+        <a id="adventuresbutton" class="titlebar" href="badm320midterm.html">BADMN320 BLOG 📝</a>
+        <a id="blogbutton" class="titlebar" href="arts.html">ARTS🎨</a>
+        <a id="gallerybutton" class="titlebar" href="gallery.html">GALLERY 📷</a>
+        <a id="contactbutton" class="titlebar" href="contact.html">CONTACT 📬</a> 
       </div>  
   </body>
 </div>
@@ -98,7 +121,10 @@
 
    <p style="font-size:22px;font;text-align:center;">Under Construction!</p>
 
-    <img class="img-ae" src="img/peachpj.JPG" alt="peachpj">
+   <img style="width:25%;"" class="img-ae" src="img/peachpj.JPG" alt="peachpj">
+
+      <img style="width:50%; position: center;" class="img-art" src="img/aeclportrait.jpg">
+  
 
   <br > 
 </div>
