syntax error in read me home page
fixed syntax error

--- a/badm320midterm.html
+++ b/badm320midterm.html
@@ -190,7 +190,7 @@
 <h3 id="subtitle" style="font-family:copperplate;">Step 2: External Analysis</h3>
 
 
-<h3 id="info">Prompt:</h3>
+<h3 id="info" style="font-family:copperplate;">Prompt:</h3>
 <p id="info" style="font-size:14px;font-family:copperplate;">
 Stengths, Weaknesses
 Attributes and Charecteristics that make me distinctive from my competitors
