uploaded prompt for midterm

--- a/badm320midterm.html
+++ b/badm320midterm.html
@@ -22,7 +22,7 @@
       border-radius: 50%;
       border-color: transparent;
       top: 125px;
-      left: 100px;
+      left: 500px;
       position: relative; 
       background-position: bottom;
 }
@@ -175,7 +175,8 @@
 
 
 <h3 id="info" style="font-family:copperplate;">Prompt:</h3>
-<p id="info" style="font-size:14px;font-family:copperplate;"></p>
+<p id="info" style="font-size:14px;font-family:copperplate;">Self-analysis: Do a strengths / weaknesses analysis of yourself. What are the attributes /
+characteristics that make you distinctive from your colleagues or competitors? What is your strong suit? What needs improvement? This will help you understand what you must focus on in the future</p>
 <br>
   <h3 id="info" style="font-family:copperplate;">Brand Logo:</h3>
   <p id="info"> Self-analysis signals a high understanding that goes beyond the self and without this, personal growth is impossible. .</p>
@@ -192,13 +193,8 @@
 
 <h3 id="info" style="font-family:copperplate;">Prompt:</h3>
 <p id="info" style="font-size:14px;font-family:copperplate;">
-Stengths, Weaknesses
-Attributes and Charecteristics that make me distinctive from my competitors
-Strong suit
-What needs improvement
-This will help me understand what I need to focus on in the future.
-
-
+ Talk to your family and friends. What do they say about you? What do they
+say is your greatest and clearest strength? Your best personal trait? Your weaknesses? 
 
 </p>
 
@@ -219,7 +215,9 @@ This will help me understand what I need to focus on in the future.
 
 
 <h3 id="info" style="font-family:copperplate;">Prompt:</h3>
-<p id="info" style="font-size:14px;font-family:copperplate;">AECL, Incorporated</p>
+<p id="info" style="font-size:14px;font-family:copperplate;">Is there congruence between your self-analysis and the external analysis? If so, you’re lucky.
+If not, why not? What direction is the incongruence? How would you reposition yourself? Remember it does not matter what you think of yourself. Other people’s perception of you is the reality. While what your friends and family say may not be completely true, that perception is how
+the world sees you.</p>
 <br>
   <h3 id="info" style="font-family:copperplate;">Brand Logo:</h3>
   <p id="info"> Self-analysis signals a high understanding that goes beyond the self and without this, personal growth is impossible. .</p>
@@ -235,7 +233,8 @@ This will help me understand what I need to focus on in the future.
 
 
 <h3 id="info" style="font-family:copperplate;">Prompt:</h3>
-<p id="info" style="font-size:14px;font-family:copperplate;">AECL, Incorporated</p>
+<p id="info" style="font-size:14px;font-family:copperplate;">Based on the analyses above, what is the “feature-benefit” model that you offer? Every
+feature a product offers yields an identifiable and distinguishable benefit for their customer or client. Car companies don’t sell 60” back seats; they sell that the car can seat four people comfortably. A dominant feature of Nordstrom is the personalized service but the customer benefit is a feeling of being accorded individualized attention. </p>
 <br>
   <h3 id="info" style="font-family:copperplate;">Brand Logo:</h3>
   <p id="info"> Self-analysis signals a high understanding that goes beyond the self and without this, personal growth is impossible. .</p>
