--- a/contact.html
+++ b/contact.html
@@ -250,17 +250,31 @@ input[type=submit]:hover {
             <input class="checkbox" type="checkbox" value="acct">Languages</input>
             <input class="checkbox" type="checkbox" value="phil">Business</input>
             </form>
-
             <br>
             <label for="subject">Message</label>
             <textarea id="subject" name="subject" placeholder="What do you wish to tell Anaelissa?" style="height:170px"></textarea>
-            <input type="submit" value="Submit" href="mailto: aec4@illinois.edu">
             </form>
-         </div>
+
+            <div id="demo">
+            <button type="button" onclick="loadDoc() ">Send</button>
+            </div>
         </div>
       </div>
 
 </body>
+
+<script> 
+  function loadDoc() {
+  var xhttp = new XMLHttpRequest();
+  xhttp.onreadystatechange = function() {
+    if (this.readyState == 4 && this.status == 200) {
+     document.getElementById("demo").innerHTML = this.responseText;
+    }
+  };
+  xhttp.open("GET", "anaelissa.info/ajax_info.txt", true);
+  xhttp.send();
+}
+</script>
 
 <!---------------------------------------------------------------------------------------------------------------------------->
 <body>
