added an old youtube video to my site
this video is so old and cringey lmao

--- a/badm320midterm.html
+++ b/badm320midterm.html
@@ -185,6 +185,11 @@ characteristics that make you distinctive from your colleagues or competitors? W
    <!img class="img-dc" style="width:25%;" src="img/aeclmylogo.png" alt="my-logo">
    <!img class="img-uiuc" style="width:20%;" src="img/kaprush.jpg">
  </div>
+
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/d3ieB5-Xb-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
 <hr>
 <!*************************************************2> 
 
