--- a/ajax.html
+++ b/ajax.html
@@ -4,6 +4,9 @@
 
 <div id="demo">
 <h1>The XMLHttpRequest Object</h1>
+<p>hi</p>
+<p>how does ajax work</p>
+<p> hey isnt that what you use to clean your stove?</p>
 <button type="button" onclick="loadDoc()">Change Content</button>
 </div>
 
