--- a/badm320midterm.html
+++ b/badm320midterm.html
@@ -22,21 +22,21 @@
       border-radius: 50%;
       border-color: transparent;
       top: 125px;
-      left: 500px;
+      left: 700px;
       position: relative; 
       background-position: bottom;
 }
 
        #title {
         font-size:30px;
-        text-align: center;
+        text-align: left;
         font-family: times;
       }
 
 
       #subtitle {
         font-size:20px;
-        text-align: center;
+        text-align: left;
         font-family: times;
       }
 
@@ -44,12 +44,26 @@
       #info {
       font-size: 14px;
       font-family: times;
-      text-align: center;
+      text-align: left;
 
+     }
+
+     #words {
+      font-size: 12px;
+      text-align: left;
+      text-decoration: none;
+      font-family: times;
+      font-weight: normal;
      }
 
       a {
         text-decoration: none;
+      }
+
+      p {
+      word-wrap: break-word;
+      width: 700px;
+}
       }
       
         <style>
@@ -159,10 +173,11 @@
 
 
 <h3 id="info" style="font-family:copperplate;">Brand:</h3>
-<h3 id="info" style="font-size:30px;color:red;font-family:copperplate;">AECL, Incorporated</h3>
+<h3 id="info" style="font-size:30px;color:red;font-family:copperplate;">I am<br style="font-size:60px" / >
+AECL</h3>
 
-  <h3 id="info" style="font-family:copperplate;">Brand Logo:</h3>
-  <p id="info"> My brand logo has my initials for Ana Elissa Cabrera Leon</p>
+  <h3 id="info" style="text-align: left;font-family:copperplate;">Brand Logo:</h3>
+  <p id="words">An intellectual with sophisticated glasses, tea enthusiast, a connoisseur of yellow things. Poised and elegant like pink. Natural born leader with a fiery red personality ready to fight for human rights. The perfect student for your law school, Class of 2023. I am AECL ... Ana Elissa Cabrera Leon ... and I need YOUR LAW SCHOOL to become the best person and attorney I can be to make the impact in society I was born to make.</p>
 
   <div class="gallery">
    <img class="img-dc" style="width:25%;" src="img/aeclmylogo.png" alt="my-logo">
@@ -171,43 +186,42 @@
 <hr>
 <!*************************************************1> 
 
-<h3 id="subtitle" style="font-family:copperplate;">Step 1: Self-Analysis</h3>
+<h3 id="subtitle" style="font-family: copperplate;">Step 1: Self-Analysis</h3>
+
+<h3 id=”info style="font-family: copperplate;"”>How I Perceive Myself</hr> 
+
+<p id=“words” style="font-weight: normal; font-size: 12px; font-family: times;">Law School is very tough but that goes without saying. To succeed in such a challenging and competitive yet life-changing and growing environment, it takes someone just as tough to achieve a Juris Doctorate. I perceive myself as a very resilient, persevering, honest and vocal person who loves learning and is very adamant and dedicated in defending basic human rights and ideas. To be the best student I can be in your law school, I took the first steps to become more self-aware of who I really am by understanding my areas of improvement and strengths.</p>
+
+<p id="words">Like any case with potential, it is best to first know the bad parts about it. My biggest weaknesses are my inability to manage my interpersonal skills and situations effectively; accepting criticism or advice; overanalyzing everything, especially the past; my timeliness; my struggle to control my emotions; and seeing in black and white but not the grey area. As an introvert, my interpersonal skills need refinement because I often come off as too honest and aggressive with no tactfulness when dealing with arguments between people I disagree with, primarily with family and friends but never in a professional or academic setting. A solution to this is allowing myself to socialize more and ask others to guide me on how to be more personable. One of my shortcomings that I have seen in my workplace is not taking criticism or advice well, which is mostly true and I am working on this by becoming a better listener and more self-aware of my surroundings based on what knowledgeable, respectable people who know me have to say about my work and character. Two other weaknesses that I have is overanalyzing everything recursively until it makes sense, which becomes frustrating when tackling questions without available answers; and my struggle to control my emotions, which can sometimes impact my grades and overall quality of life but because of my abominable strengths, I always stand back up stronger than ever to achieve my goals and dreams despite how sad or stressed I feel.</p>
+
+<p id="words">My biggest strengths are my honesty and loyalty, resilience during adversity, my charge to accomplish my goals no matter how challenging, and my courage to voice my opinion and to stand up for important human rights causes. My strongest motivator to pursue human rights law is unlike that of other candidates due to my unmatchable life experiences and ability to handle situations where human rights have been violated. Security of person, freedom from inhuman or degrading treatment or punishment, right to one’s own privacy, and freedom of opinion and expression is one of the many basic human rights written under the Universal Declaration of Human Rights (United Nations, 2020) and at 21 years old, someone took all those mentioned rights from me. My first relationship was with a computer science major transfer student at UIUC who deceived me in unlawful ways (crime against humanity), trapped me in his car in an empty Dick’s Sporting Goods parking lot during night and refused to let me escape or take me back home until I stopped crying (cruel punishment), broke a door to open a bathroom while I was using it just to make sure I wasn’t calling the police on him (privacy), trapped me in his closet while putting his hands on me so that I couldn’t move until I begged him not to kill me repeatedly (right to life and security of person), took out a knife and decapitated my plush teddy bear (degrading treatment) last Summer 2019. Being in a such a situation has given me a unique perspective in life and has helped me value how importance of supporting and helping others, given the lack of support I was given to deal with my past. Thus my ability to manage my professional and academic world while my personal world is up in flames is uncanny. My love and commitment to justice and human rights, for the betterment of society, the best personal trait I have and this makes me, AECL, the perfect match for your law school.</p>
+
+<p id="words">On the lighter side, my creativity (arts), longing for more knowledge (becoming a self-taught web developer), my writing, reading and editing skills are a few more of my great strengths. Below is a video I did for a calculus class where I simplified complex math concepts and delivered them through a song for a final project. This was when my forever-nerd stage was at its worst, back in high school so it’s a bit embarrassing!</p>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/d3ieB5-Xb-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
-<h3 id="info" style="font-family:copperplate;">Prompt:</h3>
-<p id="info" style="font-size:14px;font-family:copperplate;">Self-analysis: Do a strengths / weaknesses analysis of yourself. What are the attributes /
-characteristics that make you distinctive from your colleagues or competitors? What is your strong suit? What needs improvement? This will help you understand what you must focus on in the future</p>
-<br>
-  <h3 id="info" style="font-family:copperplate;">Brand Logo:</h3>
-  <p id="info"> Self-analysis signals a high understanding that goes beyond the self and without this, personal growth is impossible. .</p>
+</p>
 
   <div class="gallery">
    <!img class="img-dc" style="width:25%;" src="img/aeclmylogo.png" alt="my-logo">
    <!img class="img-uiuc" style="width:20%;" src="img/kaprush.jpg">
  </div>
-
-
-<iframe width="560" height="315" src="https://www.youtube.com/embed/d3ieB5-Xb-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-
 <hr>
+
 <!*************************************************2> 
 
-<h3 id="subtitle" style="font-family:copperplate;">Step 2: External Analysis</h3>
+<h3 id="subtitle" style="font-family: copperplate;">Step 2: External Analysis</h3>
 
+<h3 id=”info”>How Others Perceive Me</hr> 
 
-<h3 id="info" style="font-family:copperplate;">Prompt:</h3>
-<p id="info" style="font-size:14px;font-family:copperplate;">
- Talk to your family and friends. What do they say about you? What do they
-say is your greatest and clearest strength? Your best personal trait? Your weaknesses? 
+<p id=“words” style="font-size: 12px; font-family: times;"></p>
+
+<p id="words"></p>
+
+<p id="words"></p>
 
 </p>
-
-
-
-<br>
-  <h3 id="info" style="font-family:copperplate;">Brand Logo:</h3>
-  <p id="info"> Self-analysis signals a high understanding that goes beyond the self and without this, personal growth is impossible. .</p>
 
   <div class="gallery">
    <!img class="img-dc" style="width:25%;" src="img/aeclmylogo.png" alt="my-logo">
